chore(build): Add commmitizen config (conventional changelog)

--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
     "react-dom": "^0.14.3"
   },
   "author": "Telerik",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "cz-conventional-changelog": "^1.1.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
