--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "An internal utility package exporting gulp tasks for the Kendo React components infrastructure",
   "repository": "telerik/kendo-react-tasks",
   "main": "gulp-tasks.js",
+  "scripts": {
+    "lint": "echo lint stub"
+  },
   "keywords": [
     "Kendo UI",
     "React"
@@ -29,11 +32,17 @@
   "author": "Telerik",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cz-conventional-changelog": "^1.1.5"
+    "cz-conventional-changelog": "^1.1.5",
+    "ghooks": "^1.0.3",
+    "validate-commit-msg": "^1.1.1"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    },
+    "ghooks": {
+      "pre-commit": "npm run lint",
+      "commit-msg": "validate-commit-msg"
     }
   }
 }
