--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "telerik/kendo-react-tasks",
   "main": "gulp-tasks.js",
   "scripts": {
-    "lint": "echo lint stub"
+    "lint": "./node_modules/.bin/eslint ."
   },
   "keywords": [
     "Kendo UI",
