--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kendo-react-tasks",
+  "name": "@telerik/kendo-react-tasks",
   "version": "0.1.0",
   "description": "An internal utility package exporting gulp tasks for the Kendo React components infrastructure",
   "repository": "telerik/kendo-react-tasks",
@@ -25,7 +25,7 @@
     "gulp-jasmine": "^2.2.1",
     "jasmine-reporters": "^2.1.1",
     "jasmine-spec-reporter": "^2.4.0",
-    "kendo-common-tasks": "telerik/kendo-common-tasks#master",
+    "@telerik/kendo-common-tasks": "telerik/kendo-common-tasks#master",
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
     "react-dom": "^0.14.3"
