--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "@telerik/eslint-config": "telerik/eslint-config-kendo#master",
+    "@telerik/kendo-common-tasks": "telerik/kendo-common-tasks#master",
     "babel-core": "~6",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -26,10 +27,18 @@
     "gulp-jasmine": "^2.2.1",
     "jasmine-reporters": "^2.1.1",
     "jasmine-spec-reporter": "^2.4.0",
-    "@telerik/kendo-common-tasks": "telerik/kendo-common-tasks#master",
+    "json-loader": "^0.5.4",
+    "karma": "=0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
+    "phantomjs-prebuilt": ">=1.9",
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "source-map-loader": "^0.1.5"
   },
   "author": "Telerik",
   "license": "Apache-2.0",
