--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "babel-preset-react": "~6",
     "babel-preset-stage-1": "~6",
     "babel-traverse": "6.3.19",
+    "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
     "enzyme": "^2.0.0-rc1",
     "extract-text-webpack-plugin": "^0.9.1",
     "gulp-jasmine": "^2.2.1",
     "jasmine-reporters": "^2.1.1",
     "jasmine-spec-reporter": "^2.4.0",
+    "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
     "karma": "=0.13.19",
     "karma-chrome-launcher": "^0.2.2",
