--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "React"
   ],
   "dependencies": {
-    "@telerik/eslint-config": "telerik/eslint-config-kendo#master",
+    "@telerik/eslint-config": "1.1.0",
     "@telerik/kendo-common-tasks": "telerik/kendo-common-tasks#master",
     "babel-core": "~6",
     "babel-loader": "^6.2.0",
