--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-transform-es2015-modules-umd": "~6",
+    "babel-plugin-transform-object-assign": "^6.5.0",
     "babel-preset-es2015": "~6",
     "babel-preset-react": "~6",
     "babel-preset-stage-1": "~6",
