--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "jasmine-spec-reporter": "^2.4.0",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
-    "karma": "=0.13.19",
+    "karma": "=0.13.9",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^1.0.0",
@@ -46,6 +46,7 @@
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
     "react-dom": "^0.14.3",
+    "socket.io": "=1.4.5",
     "source-map-loader": "^0.1.5"
   },
   "author": "Telerik",
