feat: use karma from common tasks

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "@telerik/eslint-config": "1.1.0",
-    "@telerik/kendo-common-tasks": "^1.4.1",
+    "@telerik/kendo-common-tasks": "~1.5.0",
     "babel-core": "~6",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -36,17 +36,9 @@
     "jasmine-spec-reporter": "^2.4.0",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
-    "karma": "=0.13.9",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.6",
-    "karma-webpack": "^1.7.0",
-    "phantomjs-prebuilt": ">=1.9",
     "react": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
     "react-dom": "^0.14.3",
-    "socket.io": "=1.4.5",
     "source-map-loader": "^0.1.5"
   },
   "author": "Telerik",
