feat: add typescript support
Move to the usage of kendo-typescript-tasks in addition to common-tasks package. | Support typescript react packages.

BREAKING CHANGE: Support packages written in typescript only.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "React"
   ],
   "dependencies": {
+    "@progress/kendo-typescript-tasks": "dev",
     "@telerik/eslint-config": "1.1.0",
-    "@telerik/kendo-common-tasks": "^1.8.0",
+    "@types/chai": "^4.0.1",
+    "@types/enzyme": "^2.8.2",
+    "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
     "babel-core": "~6",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -27,19 +31,15 @@
     "babel-preset-react": "~6",
     "babel-preset-stage-1": "~6",
     "babel-traverse": "6.3.19",
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
-    "enzyme": "^2.0.0-rc1",
+    "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "^0.9.1",
-    "gulp-jasmine": "^2.2.1",
-    "jasmine-reporters": "^2.1.1",
-    "jasmine-spec-reporter": "^2.4.0",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
-    "react": "^0.14.3",
-    "react-addons-test-utils": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "source-map-loader": "^0.1.5"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-test-renderer": "^15.6.1",
+    "source-map-loader": "^0.1.5",
+    "webpack-karma-die-hard": "^1.0.4"
   },
   "author": "Telerik",
   "license": "Apache-2.0",
