feat(publish): add develop branch for dev distros
Add telerik semantic prerelease package for dev releses.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "gulp-tasks.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && semantic-prerelease publish && semantic-release post"
   },
   "keywords": [
     "Kendo UI",
@@ -44,10 +44,11 @@
   "author": "Telerik",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@telerik/semantic-prerelease": "^1.1.5",
     "cz-conventional-changelog": "^1.1.5",
     "ghooks": "^1.0.3",
-    "validate-commit-msg": "^1.1.1",
-    "semantic-release": "^4.3.5"
+    "semantic-release": "^4.3.5",
+    "validate-commit-msg": "^1.1.1"
   },
   "config": {
     "commitizen": {
@@ -57,5 +58,19 @@
       "pre-commit": "npm run lint",
       "commit-msg": "validate-commit-msg"
     }
+  },
+  "release": {
+    "debug": false,
+    "branchTags": {
+      "develop": "dev"
+    },
+    "fallbackTags": {
+      "dev": "latest"
+    },
+    "analyzeCommits": "@telerik/semantic-prerelease/analyzeCommits",
+    "generateNotes": "@telerik/semantic-prerelease/generateNotes",
+    "getLastRelease": "@telerik/semantic-prerelease/getLastRelease",
+    "verifyConditions": "@telerik/semantic-prerelease/verifyConditions",
+    "verifyRelease": "@telerik/semantic-prerelease/verifyRelease"
   }
 }
