--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,11 @@ env:
 addons:
   apt:
     sources:
+      - git-core
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+      - git
 before_install:
   - npm i -g npm@^5.3.0
 before_script:
