--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ addons:
 before_install:
   - npm i -g npm@^5.3.0
 before_script:
+  - git fetch origin refs/heads/master:refs/remotes/origin/master
   - npm prune
 after_success:
   - npm run semantic-release
