--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "dependencies": {
     "@progress/kendo-typescript-tasks": "dev",
     "@telerik/eslint-config": "1.1.0",
-    "@types/chai": "^4.0.1",
     "@types/enzyme": "^2.8.2",
+    "@types/jasmine": "^2.6.0",
     "babel-core": "~6",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -29,16 +29,12 @@
     "babel-preset-react": "~6",
     "babel-preset-stage-1": "~6",
     "babel-traverse": "6.3.19",
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
     "enzyme": "^2.8.2",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "jquery": "^2.2.1",
-    "json-loader": "^0.5.4",
+    "nightwatch": "^0.9.16",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.6.1",
-    "source-map-loader": "^0.1.5",
+    "selenium-standalone": "^6.9.0",
     "webpack-karma-die-hard": "^1.0.4"
   },
   "author": "Telerik",
