--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "babel-preset-react": "~6",
     "babel-preset-stage-1": "~6",
     "babel-traverse": "6.3.19",
-    "enzyme": "^2.8.2",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "nightwatch": "^0.9.16",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-test-renderer": "^15.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-test-renderer": "^16.0.0",
     "selenium-standalone": "^6.9.0",
     "webpack-karma-die-hard": "^1.0.4"
   },
