--- a/package.json
+++ b/package.json
@@ -18,25 +18,13 @@
   "dependencies": {
     "@progress/kendo-typescript-tasks": "dev",
     "@telerik/eslint-config": "1.1.0",
-    "@types/enzyme": "^2.8.2",
-    "@types/jasmine": "^2.6.0",
-    "babel-core": "~6",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-plugin-transform-es2015-modules-umd": "~6",
-    "babel-plugin-transform-object-assign": "^6.5.0",
-    "babel-preset-es2015": "~6",
-    "babel-preset-react": "~6",
-    "babel-preset-stage-1": "~6",
-    "babel-traverse": "6.3.19",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "nightwatch": "^0.9.16",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
-    "selenium-standalone": "^6.9.0",
-    "webpack-karma-die-hard": "^1.0.4"
+    "selenium-standalone": "^6.9.0"
   },
   "author": "Telerik",
   "license": "Apache-2.0",
