--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "React"
   ],
   "dependencies": {
-    "@progress/kendo-typescript-tasks": "dev",
+    "@progress/kendo-typescript-tasks": "^3.5.3",
     "@telerik/eslint-config": "1.1.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
