--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "karma-mocha-reporter": "^2.2.5",
+    "lodash.merge": "^4.6.0",
     "nightwatch": "^0.9.16",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
