--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "url": "https://github.com/telerik/kendo-react-tasks.git"
   },
   "main": "gulp-tasks.js",
-  "scripts": {
-    "lint": "./node_modules/.bin/eslint .",
-    "semantic-release": "semantic-release pre && semantic-prerelease publish && semantic-release post"
-  },
   "keywords": [
     "Kendo UI",
     "React"
   ],
+  "peerDependencies": {
+    "typescript": "^2.7.2"
+  },
   "dependencies": {
     "@progress/kendo-typescript-tasks": "^4.0.0",
     "@telerik/eslint-config": "1.1.0",
@@ -26,7 +25,11 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
-    "selenium-standalone": "^6.9.0"
+    "selenium-standalone": "^6.9.0",
+    "ts-loader": "^4.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.3",
+    "webpack": "^4.1.1",
+    "webpack-stream": "^4.0.2"
   },
   "author": "Telerik",
   "license": "Apache-2.0",
@@ -36,28 +39,5 @@
     "ghooks": "^1.0.3",
     "semantic-release": "^4.3.5",
     "validate-commit-msg": "^1.1.1"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    },
-    "ghooks": {
-      "pre-commit": "npm run lint",
-      "commit-msg": "validate-commit-msg"
-    }
-  },
-  "release": {
-    "debug": false,
-    "branchTags": {
-      "develop": "dev"
-    },
-    "fallbackTags": {
-      "dev": "latest"
-    },
-    "analyzeCommits": "@telerik/semantic-prerelease/analyzeCommits",
-    "generateNotes": "@telerik/semantic-prerelease/generateNotes",
-    "getLastRelease": "@telerik/semantic-prerelease/getLastRelease",
-    "verifyConditions": "@telerik/semantic-prerelease/verifyConditions",
-    "verifyRelease": "@telerik/semantic-prerelease/verifyRelease"
   }
 }
