--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^2.7.2"
   },
   "dependencies": {
+    "@progress/kendo-typescript-tasks": "^4.0.0",
     "@telerik/eslint-config": "1.1.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
