--- a/package.json
+++ b/package.json
@@ -17,19 +17,27 @@
   "dependencies": {
     "@progress/kendo-typescript-tasks": "^4.0.0",
     "@telerik/eslint-config": "1.1.0",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
+    "glob": "^7.1.2",
     "karma-mocha-reporter": "^2.2.5",
+    "lodash": "^4.17.5",
+    "lodash.merge": "^4.6.1",
     "nightwatch": "^0.9.16",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
+    "sass-loader": "^6.0.7",
     "selenium-standalone": "^6.9.0",
+    "style-loader": "^0.20.3",
     "ts-loader": "^4.0.1",
     "uglifyjs-webpack-plugin": "^1.2.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.1.1",
-    "webpack-stream": "^4.0.2",
-    "lodash": "^4.17.5"
+    "webpack-dev-server": "^3.1.1",
+    "webpack-stream": "^4.0.2"
   },
   "author": "Telerik",
   "license": "Apache-2.0",
