--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enzyme-adapter-react-16": "^1.0.1",
     "glob": "^7.1.2",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-webpack": "^3.0.0",
     "lodash": "^4.17.5",
     "lodash.merge": "^4.6.1",
     "nightwatch": "^0.9.16",
