feat: migrate to webpack4
The following PR introduces a new structure to the gulp tasks. 

Previously react tasks was consuming typescript tasks, which were consuming the common tasks. This structure has proven to be not the most optimal one as we were unable to benefit from the @dev channel of common tasks package. 

The current setup is directly consuming its tasks from both the typescript and common tasks packages. 

The tasks used by the common tasks packages are related to the docs server, while the ones from the typescript tasks are for the API generation. 

All other tasks are hoisted to this package thus giving us more control over their execution and the versioning of the utilities used in them.

BREAKING CHANGE: Migrate to webpack4

--- a/package.json
+++ b/package.json
@@ -15,18 +15,36 @@
     "Kendo UI",
     "React"
   ],
+  "peerDependencies": {
+    "typescript": "^2.7.2"
+  },
   "dependencies": {
-    "@progress/kendo-typescript-tasks": "^4.0.0",
+    "@progress/kendo-typescript-tasks": "^4.3.4",
+    "@telerik/kendo-common-tasks": "^3.9.2",
     "@telerik/eslint-config": "1.1.0",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
+    "glob": "^7.1.2",
+    "gulp-load-plugins": "^1.5.0",
     "karma-mocha-reporter": "^2.2.5",
-    "lodash.merge": "^4.6.0",
+    "karma-webpack": "^3.0.0",
+    "lodash": "^4.17.5",
+    "lodash.merge": "^4.6.1",
     "nightwatch": "^0.9.16",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
-    "selenium-standalone": "^6.9.0"
+    "sass-loader": "^6.0.7",
+    "selenium-standalone": "^6.9.0",
+    "style-loader": "^0.20.3",
+    "ts-loader": "^4.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.1.1",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-stream": "^4.0.2"
   },
   "author": "Telerik",
   "license": "Apache-2.0",
